[gd_scene load_steps=10 format=3 uid="uid://cnwln6yeaf2iu"]

[ext_resource type="Shader" path="res://assets/godot stuff/shaders/bulge.gdshader" id="1_n28t6"]
[ext_resource type="Script" path="res://scenes/vault/fire in the hole/lobotomy.gd" id="1_px8ni"]
[ext_resource type="Texture2D" uid="uid://dfksc56y0ie8i" path="res://assets/memes/images/images/normal-difficulty-geometry-dash-removebg-preview.png" id="2_0rc3t"]
[ext_resource type="AudioStream" uid="uid://dhvlg7olv0ho2" path="res://assets/memes/audio/sfx/High Pitch FIRE IN THE HOLE Sound Effect.mp3" id="4_52h2v"]
[ext_resource type="Theme" uid="uid://cbhog5hkho80u" path="res://assets/memes/godot stuff/lobotomy.tres" id="4_wlubp"]
[ext_resource type="AudioStream" uid="uid://cvkob1dhq0yb7" path="res://assets/memes/audio/sfx/Fire In The Hole Sound Effect.mp3" id="5_bh1pk"]
[ext_resource type="AudioStream" uid="uid://e41yjb46ncrl" path="res://assets/memes/audio/sfx/Fire In The Hole Low.mp3" id="6_dpxkr"]
[ext_resource type="AudioStream" uid="uid://de3vj8gd1blcj" path="res://assets/memes/audio/music/Spring In My Step Silent Partner.mp3" id="7_keu3m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4mchp"]
shader = ExtResource("1_n28t6")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/force = 0.08

[node name="lobotomy" type="Node2D"]
script = ExtResource("1_px8ni")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_4mchp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Normal-difficulty-geometry-dash-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(986, 552)
texture = ExtResource("2_0rc3t")

[node name="Button1" type="Button" parent="."]
offset_left = 350.0
offset_top = 800.0
offset_right = 650.0
offset_bottom = 934.0
theme = ExtResource("4_wlubp")
theme_override_font_sizes/font_size = 40
text = "More"

[node name="Button2" type="Button" parent="."]
offset_left = 800.0
offset_top = 800.0
offset_right = 1100.0
offset_bottom = 934.0
theme = ExtResource("4_wlubp")
theme_override_font_sizes/font_size = 40
text = "Lobotomy"

[node name="Button3" type="Button" parent="."]
offset_left = 1250.0
offset_top = 800.0
offset_right = 1550.0
offset_bottom = 934.0
theme = ExtResource("4_wlubp")
theme_override_font_sizes/font_size = 40
text = "Now"

[node name="Button4" type="Button" parent="."]
visible = false
offset_left = 308.0
offset_top = 391.0
offset_right = 608.0
offset_bottom = 525.0
theme = ExtResource("4_wlubp")
theme_override_font_sizes/font_size = 40
text = "get me out
of here"

[node name="Label" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 80
text = "what have you done"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("4_52h2v")
volume_db = 10.0
bus = &"sfx"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("5_bh1pk")
volume_db = 10.0
bus = &"sfx"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("6_dpxkr")
volume_db = 10.0
bus = &"sfx"

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("7_keu3m")
volume_db = 5.0
autoplay = true
bus = &"music"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
